# MuadDib

./: .gitignore  CONTRIBUTING.md  ExperimentHandler_conf.json  Makefile  README.md  debug-logconf.yml  pyproject.toml
.github/workflows/: build_pages.yml  pr_validation.yml
muaddib/: __init__.py  __main__.py  __version__.py  _default_functions.py  commands.py  data.py  experiment.py  models.py  muaddib.py  refactor_experiment.py  shaihulud_utils.py  stats_funcs.py  tinydb_serializers.py  utils.py
muaddib/data/: data_handlers.py  tools.py
muaddib/experiments/: default_functions.py  experiment.handler.py  experiment_handler.py
muaddib/models/: default_function.py  model_handler.py
muaddib/reporting/: plots.py
tests/: test_demo.py  test_muaddib.py
tests/test_arrakis/: ProjectFolder_conf.json
tests/test_arrakis/data/benchmark/: benchmark.json
tests/test_arrakis/data/benchmark/DownwardUsedSecondaryReserveEnergy/: benchmark.json  benchmark.npz
tests/test_arrakis/data/benchmark/UpwardUsedSecondaryReserveEnergy/: benchmark.json  benchmark.npz
tests/test_arrakis/test/data/: definitions.py
tests/test_arrakis/test/models/: definitions.py  predict_model.py  train_model.py
